Before CMF 1.6 beta

  Bug Fixes

    - Removed BBBTransaction class from CMFCore.utils

    - Fixed import of actions from extension profiles, now they don't
      overwrite all previous actions in the action provider.

  Features

    - Replaced Z2 interfaces w/ Z3 interfaces, dynamically creating Z2
      interfaces via bridge

    - Back-ported the GenericSetup style of site creation from CMF trunk

    - FSFile: autodetect the encoding of UTF-8 text files with a
      suitable Byte Order Mark (0xEF 0xBB 0xBF).

  Others

    - Removed GenericSetup as a package inside CMF, it is now a standalone
      product, but still distributed as part of the CMF package.

    - CMFCore utils: Made _checkPermission depend on Zope's checkPermission.
      There is no longer a need to modify the checkPermission behavior in CMF.

    - Converted CMFSetup into a pure legacy package. CMFSetup will be removed
      in CMF 2.0.

    - Reordered base classes of File and Image, to allow use of super().

    - Made unit tests close the request properly.

    - Changed TypesTool.manage_addTypeInformation method to log a warning
      instead of raise an exception if the typeinfo_name is not found.